--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 호스팅</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>현정민 자기소개</title>
+  <style>
+    /* 기본 스타일 */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #fdfdfd;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* 헤더 */
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+    }
+
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.1em;
+    }
+
+    /* 섹션 스타일 */
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    section h2 {
+      color: #4CAF50;
+      border-bottom: 2px solid #4CAF50;
+      padding-bottom: 5px;
+    }
+
+    section p {
+      margin: 15px 0;
+      font-size: 1.1em;
+    }
+
+    /* 카드 스타일 */
+    .card {
+      background-color: #f9f9f9;
+      border: 1px solid #ddd;
+      padding: 20px;
+      margin: 20px 0;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    /* 푸터 */
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      margin-top: 50px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.5em;
+      }
+      section h2 {
+        font-size: 1.2em;
+      }
+    }
+  </style>
 </head>
 <body>
-    git pages 입니다.
+
+  <!-- 헤더 -->
+  <header>
+    <h1>현정민의 홈페이지</h1>
+    <p>자기소개 & 관심분야 & 대학생활 목표</p>
+  </header>
+
+  <!-- 자기소개 섹션 -->
+  <section>
+    <h2>자기소개</h2>
+    <div class="card">
+      <p>안녕하세요! 저는 <strong>현정민</strong>이고, 2003년생 <strong>24살</strong>입니다.</p>
+      <p>원래 간호대학을 다녔지만 적성에 맞지 않아 수능을 다시 치고 <strong>한국기술교육대학교</strong>에 입학하게 되었습니다.</p>
+    </div>
+  </section>
+
+  <!-- 관심분야 섹션 -->
+  <section>
+    <h2>관심분야</h2>
+    <div class="card">
+      <p>저의 관심분야는 <strong>AI</strong>와 <strong>코딩</strong>입니다. 기술을 배우고 활용하는 과정에서 새로운 문제를 해결하는 것을 즐깁니다.</p>
+    </div>
+  </section>
+
+  <!-- 대학생활 목표 섹션 -->
+  <section>
+    <h2>대학생활 목표</h2>
+    <div class="card">
+      <p>대학생활 동안 사회가 요구하는 다양한 능력들을 터득하여, 4년 후 사회의 인재로 거듭나는 것이 목표입니다.</p>
+    </div>
+  </section>
+
+  <!-- 푸터 -->
+  <footer>
+    <p>&copy; 2026 현정민 | 자기소개 홈페이지</p>
+  </footer>
+
 </body>
 </html>
