--- a/index.html
+++ b/index.html
@@ -1,3 +1,78 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>현정민 자기소개</title>
+<style>
+  /* 전체 기본 스타일 */
+  body, html {
+    margin:0; padding:0;
+    font-family: 'Arial', sans-serif;
+    scroll-behavior: smooth;
+  }
+  a {text-decoration:none; color: inherit;}
+  section {padding: 80px 20px; max-width: 1000px; margin:auto;}
+
+  /* 헤더 / 네비게이션 */
+  header {
+    position: fixed; top:0; width:100%;
+    background:#4CAF50; color:white; z-index:1000;
+    display:flex; justify-content:space-between; align-items:center;
+    padding: 15px 50px; box-shadow:0 2px 5px rgba(0,0,0,0.2);
+  }
+  header .logo {font-weight:bold; font-size:1.5em;}
+  header nav a {margin-left:30px; font-weight:bold; transition:0.3s;}
+  header nav a:hover {opacity:0.7;}
+
+  /* Hero 섹션 */
+  .hero {
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://source.unsplash.com/1600x900/?technology') no-repeat center/cover;
+    display:flex; flex-direction:column; justify-content:center; align-items:center; color:white; text-align:center;
+  }
+  .hero h1 {font-size:3em; margin-bottom:10px;}
+  .hero p {font-size:1.5em;}
+
+  /* 섹션 제목 */
+  section h2 {
+    font-size:2em; color:#4CAF50; margin-bottom:20px; position:relative;
+  }
+  section h2::after {
+    content:""; display:block; width:60px; height:3px; background:#4CAF50; margin-top:5px;
+  }
+
+  /* 카드 스타일 */
+  .card {
+    background:#f9f9f9; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1);
+    margin-bottom:30px; opacity:0; transform: translateY(20px); transition:0.6s;
+  }
+
+  /* 애니메이션 클래스 */
+  .card.visible {opacity:1; transform: translateY(0);}
+  
+  /* 푸터 */
+  footer {background:#333; color:white; text-align:center; padding:30px 20px;}
+  
+  @media(max-width:768px){header {padding:15px 20px;} header nav a{margin-left:15px;} .hero h1{font-size:2em;} .hero p{font-size:1em;}}
+</style>
+</head>
+<body>
+
+<header>
+  <div class="logo">현정민</div>
+  <nav>
+    <a href="#about">자기소개</a>
+    <a href="#interest">관심분야</a>
+    <a href="#goal">대학생활 목표</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h1>안녕하세요, 현정민입니다!</h1>
+  <p>AI와 코딩에 관심 있는 신입 대학생</p>
+</section>
+
 <section id="about">
   <h2>자기소개</h2>
   <div class="card">
@@ -7,3 +82,40 @@
     <p>대학생활의 목표는 다양한 실무 경험과 함께 코딩, AI, 제2외국어 등을 공부하며 <strong>변화하는 시대에 맞는 인재</strong>가 되는 것입니다.</p>
   </div>
 </section>
+
+<section id="interest">
+  <h2>관심분야</h2>
+  <div class="card">
+    <p>저의 관심분야는 <strong>AI</strong>와 <strong>코딩</strong>입니다. 기술을 배우고 활용하며 문제를 해결하는 것을 즐기고, 이를 통해 일상생활과 다양한 프로젝트에 효율적으로 적용하고자 합니다.</p>
+  </div>
+</section>
+
+<section id="goal">
+  <h2>대학생활 목표</h2>
+  <div class="card">
+    <p>대학생활 동안 다양한 실무 경험을 쌓고, 코딩과 AI, 제2외국어를 포함한 여러 능력을 개발하며, 변화하는 시대에 맞는 <strong>사회적 인재</strong>로 성장하는 것이 목표입니다.</p>
+  </div>
+</section>
+
+<footer>
+  &copy; 2026 현정민 | 자기소개 홈페이지
+</footer>
+
+<script>
+  // 스크롤 시 카드 애니메이션
+  const cards = document.querySelectorAll('.card');
+  function showCards() {
+    const triggerBottom = window.innerHeight * 0.85;
+    cards.forEach(card => {
+      const cardTop = card.getBoundingClientRect().top;
+      if(cardTop < triggerBottom){
+        card.classList.add('visible');
+      }
+    });
+  }
+  window.addEventListener('scroll', showCards);
+  window.addEventListener('load', showCards);
+</script>
+
+</body>
+</html>
